--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
           <th>ID</th>
           <th>Name</th>
           <th>Rating</th>
-          <!-- <th>Genres</th>
-          <th>Summary</th> -->
+          <th>Genres</th>
+          <th>Summary</th>
         </tr>
       </thead>
       <tbody></tbody>
