maknuta 2 element i boja

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <body>
     <input type="text" name="text" id="text" />
     <button class="addButton">Search</button>
-    <div style="background-color: blue" class="test">gggg</div>
+    <div style="background-color: rgb(255, 30, 0)" class="test">gggg</div>
     <table id="results-table">
       <thead>
         <tr>
           <th>ID</th>
           <th>Name</th>
           <th>Rating</th>
-          <th>Genres</th>
-          <th>Summary</th>
+          <!--    <th>Genres</th>
+          <th>Summary</th> -->
         </tr>
       </thead>
       <tbody></tbody>
